# LovelyAIQRcodeDecoder_rs

./: .gitignore  Cargo.toml  README.md  generate_qr.py  generate_small_qr.py
.trae/documents/: qr_code_decoder_architecture.md  qr_code_decoder_prd.md
src/: batch_processor.rs  brute_force_decoder.rs  cli.rs  enhanced_processor.rs  error.rs  image_processor.rs  lib.rs  main.rs  output.rs  progress_display.rs  qr_decoder.rs  types.rs  wechat_qr_decoder.rs
